ai-descriptor-derive/tests/ui/compile_fail/item_feature_missing_ai.stderr
error: Unit variants must have an #[ai("...")] attribute
 --> tests/ui/compile_fail/item_feature_missing_ai.rs:7:5
  |
7 |     Invisibility, // Missing #[ai("...")]
  |     ^^^^^^^^^^^^
